--- a/CSLAUV Original/index.html
+++ b/CSLAUV Original/index.html
@@ -346,7 +346,7 @@
        
         <section class="subscribe text-center">
           <div class="container">
-            <h1><i class="fa fa-paper-plane"></i><span>Subscribe to stay in the loop</span></h1>
+            <h1><i class="fa fa-paper-plane"></i><span>Stay in the loop</span></h1>
             <form action="#">
               <input type="text" name="" value="" placeholder="" required>
               <input type="submit" name="" value="Send">
