--- a/CSLAUV Original/index.html
+++ b/CSLAUV Original/index.html
@@ -106,7 +106,7 @@
                     <div class="icon">
                       <i class="fa fa-laptop shadow"></i>
                     </div>
-                    <h2>Sponsors</h2>
+                    <h2><a href="sponsors.html" >Sponsors</a></h2>
                     <p>blah blah.</p>
                   </div>
               
@@ -114,7 +114,7 @@
                     <div class="icon">
                       <i class="fa fa-code shadow"></i>
                     </div>
-                    <h2>Teachers</h2>
+                    <h2><a href="teachers.html">Teachers</a></h2>
                     <p>blah blah.</p>
                   </div>
                 
@@ -122,7 +122,7 @@
                     <div class="icon">
                       <i class="fa fa-heart shadow"></i>
                     </div>
-                    <h2>Others</h2>
+                    <h2><a href="contributors.html">Others</a></h2>
                     <p>blah blah.</p>
                   </div>
                   <div class="clearfix"></div>
@@ -195,7 +195,7 @@
                         <div class="img">
                           <img src="img/machine.jpg" alt="Portfolio Item">
                           <div class="overlay">
-                            <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
+                            <a href="creative_engine.html" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
                           </div>
                         </div>
@@ -209,7 +209,7 @@
                         <div class="img">
                           <img src="img/circuitBoard.jpg" alt="Portfolio Item">
                           <div class="overlay">
-                            <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
+                            <a href="creative_power.html" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
                           </div>
                         </div>
@@ -223,7 +223,7 @@
                         <div class="img">
                           <img src="img/gui.jpg" alt="Portfolio Item">
                           <div class="overlay">
-                            <a href="#" class="expand"><i class="fa fa-search"></i><br>View More</a>
+                            <a href="creative_software.html" class="expand"><i class="fa fa-search"></i><br>View More</a>
                             <a class="close-overlay hidden">x</a>
                           </div>
                         </div>
@@ -242,7 +242,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <a href="#" class="ignite-btn">Ignite Your Passion</a>
+                <a href="ignite_your_passion.html" class="ignite-btn">Ignite Your Passion</a>
               </div>
             </div>
           </div>
