About Us Content
About us updated

--- a/CSLAUV Original/index.html
+++ b/CSLAUV Original/index.html
@@ -79,7 +79,12 @@
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">About Us</h1>
-                <p>California State Los Angeles Autonomous Vehicle (CSLAUV) is a research team on campus comprised of mechanical engineers, electrical engineers, civil engineers, computer scientists, and business majors. Our mission is to create an interactive learning environment by building an autonomous underwater vehicle for competition. Anyone from any major are welcomed to join. </p>
+                <p>
+					The goal of CSLA AUV is to design, build, and test autonomous underwater vehicles to compete in the annual AUVSI RoboSub Competition. The AUV will traverse an obstacle course underwater and perform a series of pre-determined tasks without any human interaction. 
+				</p>
+				<p>
+					Our team consists of a wide variety of students in both experience and academic disciplines. The team is open to undergraduates, graduate students, and even CSLA alumni. The team is heavily multidisciplinary, including students from mechanical engineering, electrical engineering, computer science, and business. These students are organized into various sub-teams, and are then given responsibilities that allow them to learn and excel. 
+				</p>
               </div>
             </div>
           
