--- a/CSLAUV Original/index.html
+++ b/CSLAUV Original/index.html
@@ -417,6 +417,7 @@
                   <li><a href="https://www.facebook.com/profile.php?id=100012352534116&fref=ts" class="social-btn"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="https://twitter.com/CSLA_AUV" class="social-btn"><i class="fa fa-twitter"></i></a></li>
                   <li><a href="https://www.instagram.com/cslauv/" class="social-btn"><i class="fa fa-instagram"></i></a></li>
+                  <li><img src= "/img/snapchat.png" class="social-btn"><i class="fa fa-snapchat" aria-hidden="true"></i>
 				  
 
                 </ul>
